# py_datacleaning

./: CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
docs/: Makefile  conf.py  example.ipynb  make.bat
src/pydatacleaning/: __init__.py
src/pydatacleaning_jasjotp/: __init__.py  pydatacleaning.py
tests/: test_pydatacleaning.py
